# pro_tmpl_stm32f10x

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  expect.writeflash.sh  run.jdebug  toolchain-arm-eabi-gcc.cmake
Debug/: makefile
Debug/src/: subdir.mk
board/ALIENTEK/System/sys/: sys.c
user/src/: main.c
